After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674789 - xmllint --pretty crashed without following numeric argument
xmllint --pretty crashed without following numeric argument
Status: RESOLVED FIXED
Product: libxml2
Classification: Platform
Component: general
2.7.8
Other Linux
: Normal normal
: ---
Assigned To: Daniel Veillard
libxml QA maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-25 12:28 UTC by Aron Xu
Modified: 2013-08-29 08:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Check for null before calling atoi (619 bytes, patch)
2013-08-22 18:41 UTC, Tim Galeckas
none Details | Review

Description Aron Xu 2012-04-25 12:28:02 UTC
Running "xmllint --pretty" with/without input crashes. Possibly a cmdline parameter parse problem, as --pretty should take a numeric argument.

This bug was originally reported at Ubuntu bug tracker, trace information are avaliable:

 https://bugs.launchpad.net/ubuntu/+source/libxml2/+bug/923671
Comment 1 Tim Galeckas 2013-08-22 18:41:46 UTC
Created attachment 252780 [details] [review]
Check for null before calling atoi
Comment 2 Daniel Veillard 2013-08-29 08:47:00 UTC
Indeed, makes sense

https://git.gnome.org/browse/libxml2/commit/?id=2205ff4b0d4a70ed986f28b27c4a2037f6f0af1f

Patch pushed to git, thanks Tim !

Daniel